Fri Nov 24 13:27:55 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * bin/MakeProjectCreator/config/automake.features:

          Set stl and boost.  We'll use automake conditionals to defer
          this option to configure time.

Fri Nov 24 13:05:01 UTC 2006  Olli Savia  <ops@iki.fi>

        * tests/OS_Test.cpp:
          Added ACE_OS::snprintf test.

Fri Nov 24 10:08:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Sock_Connect.cpp:
          Fixed compile errors when building on linux with no
          networking support

Thu Nov 23 17:06:17 UTC 2006  Simon McQueen  <sm@prismtech.com>

        * ace/OS_Errno.h:
        * ace/OS_Errno.cpp:

          Fix compile errors with g++ on Solaris with NDEBUG.

Thu Nov 23 14:09:17 UTC 2006  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/rules.lib.GNU: Corrected error introduced by
          Wed Nov 22 21:53:17 UTC 2006  Steve Huston  <shuston@riverace.com>.

Thu Nov 23 06:53:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/ace_for_tao.mpb:
          Added ACE_LACKS_MSG_WFMO as define, that prevents other projects
          to try to use the msg wfmo reactor which is not available in the
          ace_for_tao configuration

Thu Nov 23 03:14:58 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * tests/Integer_Truncate_Test.cpp:
        * apps/JAWS/clients/WebSTONE/src/README:

          Removed svn:executable property.

Wed Nov 22 23:16:22 UTC 2006  Steve Huston  <shuston@riverace.com>

        * examples/Timer_Queue/Async_Timer_Queue_Test.cpp: Ignore SIGQUIT code
          for platforms with ACE_LACKS_UNIX_SIGNALS. Fixes WinCE build error.

Wed Nov 22 21:58:16 UTC 2006  Steve Huston  <shuston@riverace.com>

        * tests/RB_Tree_Test.cpp: Don't use ACE_ASSERT for code - it doesn't
          get executed in Release builds.

        Pulled these in from the 5.5 stream:
